Updated Ui & Fixed Bugs

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -2,7 +2,7 @@ $textColor3: hsl(213, 96%, 18%);
 $ActivePlan: hsl(243, 100%, 62%);
 $Pastelblue: hsl(228, 100%, 84%);
 $Active: hsl(206, 94%, 87%);
-$Strawberryred: hsl(354, 84%, 57%);
+$Error: hsl(354, 84%, 57%);
 $textColor2: hsl(231, 11%, 63%);
 $lightgrey: hsl(229, 24%, 87%);
 $billColor: hsl(217, 100%, 97%);
