--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,7 @@ html {
   background: none;
   color: hsl(0deg, 0%, 100%);
   font-size: 1.2rem;
+  font-weight: normal;
   padding: 1.2rem;
   border-radius: 100%;
   border: 0.1rem solid hsl(0deg, 0%, 100%);
@@ -151,6 +152,17 @@ html {
   font-family: ubuntuM;
   font-size: 1.5rem;
   margin-top: 1rem;
+}
+
+.titles {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.display_error {
+  color: hsl(354deg, 84%, 57%);
 }
 
 .input_type_1 {
@@ -564,7 +576,7 @@ html {
     width: 30rem;
   }
   .sidebar_desktop {
-    width: 28%;
+    width: 30%;
   }
   .heading1 {
     font-size: 2rem;
@@ -572,7 +584,7 @@ html {
   .subheading1 {
     margin-top: 0.5rem;
   }
-  .subheading1, .input_type_1, .subheading3 {
+  .subheading1, .input_type_1, .subheading3, .display_error {
     font-size: 0.8rem;
   }
   .subheading3 {
@@ -583,7 +595,7 @@ html {
     font-size: 1.2rem;
   }
   .input_type_1 {
-    padding: 0.8rem;
+    padding: 0.6rem;
   }
   .step_name {
     font-size: 0.8rem;
@@ -595,11 +607,12 @@ html {
   .step_nickName {
     font-size: 1rem;
   }
-  .input_type_1, .duration, .add_on, .ActiveAdd_on, .bill, .total {
+  .titles, .input_type_1, .duration, .add_on, .ActiveAdd_on, .bill, .total {
     width: 85%;
   }
   .next_desktop, .back_desktop, .confirm_desktop {
     font-size: 1rem;
+    padding: 0.5rem;
     width: 7rem;
   }
   .next_desktop {
